Example project: remove buildSrc, deduplication is not worth the complexity